fix composer json

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         {
             "name": "Buatin Website",
             "email": "tolong@buatin.website",
-            "homepage": "buatin.website"
+            "homepage": "https://buatin.website"
         }
     ],
     "homepage": "https://github.com/buatin/webc",
