fix composer json, fix readme

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "buatin/webc",
     "description": "",
-    "license": "CC BY-ND 4.0",
+    "license": "proprietary",
     "authors": [
         {
             "name": "Buatin Website",
