--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "buatin/webc",
+    "name": "buatin/core",
     "description": "",
     "license": "proprietary",
     "authors": [
@@ -9,10 +9,11 @@
             "homepage": "https://buatin.website"
         }
     ],
-    "homepage": "https://github.com/buatin/webc",
-    "keywords": ["Laravel", "WebC"],
+    "homepage": "https://github.com/Buatin-Website/Buatin-Core",
+    "keywords": ["Laravel"],
     "require": {
-        "illuminate/support": "~7|~8"
+        "illuminate/support": "~7|~8",
+        "vlucas/phpdotenv": "^5.3"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0",
@@ -20,21 +21,21 @@
     },
     "autoload": {
         "psr-4": {
-            "Buatin\\WebC\\": "src/"
+            "Buatin\\Core\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Buatin\\WebC\\Tests\\": "tests"
+            "Buatin\\Core\\Tests\\": "tests"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Buatin\\WebC\\WebCServiceProvider"
+                "Buatin\\Core\\CoreServiceProvider"
             ],
             "aliases": {
-                "WebC": "Buatin\\WebC\\Facades\\WebC"
+                "Core": "Buatin\\Core\\Facades\\Core"
             }
         }
     }
