--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     "homepage": "https://github.com/Buatin-Website/Buatin-Core",
     "keywords": ["Laravel"],
     "require": {
-        "illuminate/support": "~7|~8",
-        "vlucas/phpdotenv": "^5.3"
+        "illuminate/support": "~7|~8"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0",
