--- a/composer.json
+++ b/composer.json
@@ -10,22 +10,16 @@
         }
     ],
     "homepage": "https://github.com/Buatin-Website/Buatin-Core",
-    "keywords": ["Laravel"],
+    "keywords": ["Buatin Core"],
     "require": {
-        "illuminate/support": "~7|~8"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "~9.0",
-        "orchestra/testbench": "~5|~6"
+        "illuminate/support": "~5|~6|~7|~8",
+        "guzzlehttp/guzzle": "^7.0",
+        "vlucas/phpdotenv": "^5.3",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
             "Buatin\\Core\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Buatin\\Core\\Tests\\": "tests"
         }
     },
     "extra": {
