--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "keywords": ["Buatin Core"],
     "require": {
         "illuminate/support": "~5|~6|~7|~8",
-        "guzzlehttp/guzzle": "^7.0",
+        "guzzlehttp/guzzle": "~6",
         "vlucas/phpdotenv": "^3.3",
         "ext-json": "*"
     },
