--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "illuminate/support": "~5|~6|~7|~8",
         "guzzlehttp/guzzle": "~6|~7",
-        "vlucas/phpdotenv": "~3|~4",
+        "vlucas/phpdotenv": "~3|~4|~5",
         "ext-json": "*"
     },
     "autoload": {
