--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "homepage": "https://github.com/Buatin-Website/Buatin-Core",
     "keywords": ["Buatin Core"],
     "require": {
-        "illuminate/support": "~5|~6|~7|~8",
+        "illuminate/support": "~6|~7",
         "guzzlehttp/guzzle": "~6|~7",
         "vlucas/phpdotenv": "~3|~4",
         "ext-json": "*"
