--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
     "homepage": "https://github.com/Buatin-Website/Buatin-Core",
     "keywords": ["Buatin Core"],
     "require": {
-        "illuminate/support": "~5|~6|~7|~8",
-        "guzzlehttp/guzzle": "~6|~7",
-        "vlucas/phpdotenv": "~3|~4|~5",
+        "illuminate/support": "~8",
+        "guzzlehttp/guzzle": "~7",
+        "vlucas/phpdotenv": "~5",
         "ext-json": "*"
     },
     "autoload": {
